# ifshare

./: CMakeLists.txt  README.md
include/: client.h  defs.h  fqueue.h  frame.h  ifshare.h  log.h  server.h  util.h
src/: client.c  fqueue.c  frame.c  ifclient.c  ifserver.c  log.c  server.c  util.c
